package core;

public enum TransactionType {
    INCOME,
    EXPENSE
}
